# rbfn

./: .gitignore  CMakeLists.txt  COPYRIGHT  README.md
header/: rbf.h
src/: CMakeLists.txt  kmeans.c  kmeans.h  lls.c  lls.h  matrix.c  matrix.h  netdata.c  netdata.h  rbf.c  rbf.h
test/: CMakeLists.txt  erbftest1.c  iris.data.txt  rbftest1.c
test/datasets/: abelone.test  abelone.train  bank32fm.test  bank32fm.train  bank32nh.test  bank32nh.train  building.test  building.train  census-house.test  census-house.train  diabetes.test  diabetes.train  gene.test  gene.train  kin32fm.test  kin32fm.train  mushroom.test  mushroom.train  parity13.test  parity8.test  parity8.train  pumadyn-32fm.test  pumadyn-32fm.train  robot.test  robot.train  soybean.test  soybean.train  thyroid.test  thyroid.train  two-spiral.test  two-spiral.train
